add prize to user route
