# routes/prize.routes.js
@@ -1,16 +1,12 @@
-const express = require('express');
-const PrizesController = require('../controllers/prize.controller.js');
-const validateRequest = require('../middlewares/validateRequest.middleware.js');
-const {
-    // prizeIdSchema,
-    // userIdSchema,
-    redeemPrizeSchema
-} = require('../validations/prize.validation.js');
-const authenticateToken = require('../middlewares/jwt.middleware.js');
+const express = require('express')
+const PrizesController = require('../controllers/prize.controller.js')
+const validateRequest = require('../middlewares/validateRequest.middleware.js')
+const { redeemPrizeSchema } = require('../validations/prize.validation.js')
+const authenticateToken = require('../middlewares/jwt.middleware.js')
 
 const router = express.Router()
 
-router.use(authenticateToken);
+router.use(authenticateToken)
 
 /**
  * @swagger
@@ -54,7 +50,7 @@ router.use(authenticateToken);
  *                         type: string
  *                         example: "Partner Name"
  */
-router.get('/', PrizesController.getAllPrizes);
+router.get('/', PrizesController.getAllPrizes)
 
 /**
  * @swagger
@@ -112,9 +108,88 @@ router.get('/', PrizesController.getAllPrizes);
  *                       type: string
  *                       example: "Prize not found"
  */
-router.get('/:id',
-    // validateRequest(prizeIdSchema), 
-    PrizesController.getPrizeById);
+router.get(
+  '/:id',
+  // validateRequest(prizeIdSchema),
+  PrizesController.getPrizeById
+)
+
+/**
+ * @swagger
+ * /prizes/user/{userId}:
+ *   post:
+ *     summary: Assign a prize to a user
+ *     tags: [Prizes]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: integer
+ *         description: The ID of the user
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               userId:
+ *                 type: integer
+ *                 example: 123
+ *               prizeId:
+ *                 type: integer
+ *                 example: 1
+ *     responses:
+ *       201:
+ *         description: Prize successfully assigned to user
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 status:
+ *                   type: string
+ *                   example: success
+ *                 data:
+ *                   type: object
+ *                   properties:
+ *                     message:
+ *                       type: string
+ *                       example: "Prize successfully saved"
+ *                     userPrize:
+ *                       type: object
+ *                       properties:
+ *                         id:
+ *                           type: integer
+ *                           example: 1
+ *                         fk_id_user:
+ *                           type: integer
+ *                           example: 123
+ *                         fk_id_prize:
+ *                           type: integer
+ *                           example: 1
+ *                         is_used:
+ *                           type: boolean
+ *                           example: false
+ *       400:
+ *         description: Invalid input
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 status:
+ *                   type: string
+ *                   example: fail
+ *                 data:
+ *                   type: object
+ *                   properties:
+ *                     error:
+ *                       type: string
+ *                       example: "User ID and Prize ID are required"
+ */
+router.post('/user/:userId', PrizesController.savePrize)
 
 /**
  * @swagger
@@ -169,9 +244,67 @@ router.get('/:id',
  *                         type: string
  *                         example: "COUPON123"
  */
-router.get('/user/:userId',
-    // validateRequest(userIdSchema),
-    PrizesController.getPrizesByUserId);
+router.get(
+  '/user/:userId',
+  // validateRequest(userIdSchema),
+  PrizesController.getPrizesByUserId
+)
+
+/**
+ * @swagger
+ * /prizes/user-prize/{userPrizeId}:
+ *   get:
+ *     summary: Get a specific user prize by ID
+ *     tags: [Prizes]
+ *     parameters:
+ *       - in: path
+ *         name: userPrizeId
+ *         required: true
+ *         schema:
+ *           type: integer
+ *         description: The ID of the user prize
+ *     responses:
+ *       200:
+ *         description: Details of the user prize
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 status:
+ *                   type: string
+ *                   example: success
+ *                 data:
+ *                   type: object
+ *                   properties:
+ *                     id:
+ *                       type: integer
+ *                       example: 1
+ *                     fk_id_user:
+ *                       type: integer
+ *                       example: 123
+ *                     fk_id_prize:
+ *                       type: integer
+ *                       example: 1
+ *                     is_used:
+ *                       type: boolean
+ *                       example: false
+ *                     prizes:
+ *                       type: object
+ *                       properties:
+ *                         id:
+ *                           type: integer
+ *                           example: 1
+ *                         name:
+ *                           type: string
+ *                           example: "Prize Name"
+ *                         description:
+ *                           type: string
+ *                           example: "Prize description"
+ *       404:
+ *         description: User prize not found
+ */
+router.get('/user-prize/:userPrizeId', PrizesController.getUserPrizeById)
 
 /**
  * @swagger
@@ -273,6 +406,10 @@ router.get('/user/:userId',
  *                         type: string
  *                       example: ["isUsed must be a boolean", "Prize isUsed can only be changed to true and cannot be reverted"]
  */
-router.put('/redeem/:userPrizeId', validateRequest(redeemPrizeSchema), PrizesController.redeemPrize);
+router.put(
+  '/redeem/:userPrizeId',
+  validateRequest(redeemPrizeSchema),
+  PrizesController.redeemPrize
+)
 
-module.exports = router;
+module.exports = router
